--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -3,4 +3,5 @@
 Under construction
 
 Currently working on getting the automation setup to publish when changes are
-made.
+made. Trying to figure out what permissions the token needs to send a repository
+dispatch to the playbook.
