feat: add update about working on semantic release
Really just to see if it's working.

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -5,3 +5,6 @@ Under construction
 Currently working on getting the automation setup to publish when changes are
 made. Trying to figure out what permissions the token needs to send a repository
 dispatch to the playbook. According to the docs, content:write should be enough?
+
+Update: the automation seems to be working pretty well, working on adding
+semantic-release into the mix.
